--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/cookie-parser": "^1.4.2",
+    "@types/csurf": "^1.11.0",
     "ajv": "^7.0.0-beta.3",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "chess.js": "^0.11.0",
     "connect-session-sequelize": "^7.0.4",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.2.3",
     "express-session": "^1.17.1",
