--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,22 @@
 version: '3.7'
 services:
   db:
-    image: mysql:5.6
+    image: mysql:5.7
     restart: always
     ports:
       - target: 3306
         published: 3306
         protocol: tcp
         mode: host
-    environment:
-      - MYSQL_ROOT_PASSWORD=secret
+    env_file: 
+      - .db.env
     volumes:
       - db_data:/var/lib/mysql
   ui:
     build:
       context: ../chess-ui
     ports:
-      - target: 80
+      - target: 443
         published: 3000
         protocol: tcp
         mode: host
@@ -25,17 +25,16 @@ services:
   api:
     build:
       context: .
+      network: host
     restart: always
     ports:
-      - target: 8080
-        published: 8080
+      - target: 8443
+        published: 8443
         protocol: tcp
         mode: host
     depends_on:
       - db
-    environment:
-      - DB_HOST=db
-      - DB_USERNAME=root
-      - DB_PASSWORD=secret
+    env_file: 
+      - .env
 volumes:
   db_data: {}
