--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon --exec ts-node -T app.ts",
-    "build": "tsc --project ./ --outDir build",
+    "start": "nodemon --exec ts-node -T app.ts",
+    "build": "tsc --project ./",
     "test": "jest"
   },
   "dependencies": {
@@ -50,10 +49,8 @@
     "@types/node-cron": "^2.0.3",
     "@types/supertest": "^2.0.10",
     "@types/zxcvbn": "^4.4.0",
-    "babel-jest": "^26.6.3",
     "nodemon": "^2.0.6",
     "safe-regex": "^2.1.1",
-    "supertest": "^6.0.1",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
   }
